--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-aaa
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Portfolio</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+<body>
+    site en construction :)))))))))))
+</body>
+</html>
