--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    site en construction :)))))))))))
+    site en construction :)
+    en train d'apprendre bootstrap et tout ce qui va avec... 
 </body>
 </html>
