--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Portfolio Elias GARACH-MALULY</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    site en construction :)
-    en train d'apprendre bootstrap et tout ce qui va avec... 
 </body>
 </html>
